--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="info sims">
             <h3> DocDocDoc
             </h3>
-            <p class="description">DocDocDoc est la première application de messagerie pensée pour les praticiens de santé. Un outil professionnel, aussi simple qu’un texto, enrichi de fonctionnalités sur-mesure pour les praticiens de santé.</p>
+            <p class="description">DocDocDoc est la première application de messagerie pensée pour les praticiens de santé. Un outil professionnel, aussi simple qu’un texto, enrichi de fonctionnalités sur-mesures.</p>
             <h4>Rôle</h4>
             <p class="tags"><span class="tag">Co-Founder</span><span class="tag">Designer</span><span class="tag">Dev Front</span>
             </p>
@@ -152,7 +152,7 @@
           <div class="two-face__scroll">
             <h3> DocDocDoc
             </h3>
-            <p class="description">DocDocDoc est la première application de messagerie pensée pour les praticiens de santé. Un outil professionnel, aussi simple qu’un texto, enrichi de fonctionnalités sur-mesure pour les praticiens de santé.</p>
+            <p class="description">DocDocDoc est la première application de messagerie pensée pour les praticiens de santé. Un outil professionnel, aussi simple qu’un texto, enrichi de fonctionnalités sur-mesures.</p>
             <h4>Rôle</h4>
             <p class="tags"><span class="tag">Co-Founder</span><span class="tag">Designer</span><span class="tag">Dev Front</span>
             </p>
@@ -169,7 +169,7 @@
           <div class="info sims">
             <h3> Calculatrice
             </h3>
-            <p class="description">Ce projet a pour but de repenser la calculatrice en y ajoutant entre autre un historique, la possibilité de labélise les chiffres ainsi que la sauvegarde des calculs.</p>
+            <p class="description">Ce projet a pour but de repenser la calculatrice en y ajoutant notamment un historique de calculs, la possibilité de labéliser les chiffres ainsi que la sauvegarde des calculs.</p>
             <h4>Rôle</h4>
             <p class="tags"><span class="tag">Designer</span><span class="tag">Dev Front</span>
             </p>
@@ -186,7 +186,7 @@
           <div class="two-face__scroll">
             <h3> Calculatrice
             </h3>
-            <p class="description">Ce projet a pour but de repenser la calculatrice en y ajoutant entre autre un historique, la possibilité de labélise les chiffres ainsi que la sauvegarde des calculs.</p>
+            <p class="description">Ce projet a pour but de repenser la calculatrice en y ajoutant notamment un historique de calculs, la possibilité de labéliser les chiffres ainsi que la sauvegarde des calculs.</p>
             <h4>Rôle</h4>
             <p class="tags"><span class="tag">Designer</span><span class="tag">Dev Front</span>
             </p>
@@ -203,7 +203,7 @@
           <div class="info sims">
             <h3> Startup Innovation
             </h3>
-            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idée et de projet varier.</p>
+            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idées et de projets varier/variés.</p>
             <h4>Client</h4>
             <p class="tags"><span class="tag">Innovation factory</span></p>
             <h4>Rôle</h4>
@@ -222,7 +222,7 @@
           <div class="two-face__scroll">
             <h3> Startup Innovation
             </h3>
-            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idée et de projet varier.</p>
+            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idées et de projets varier/variés.</p>
             <h4>Client</h4>
             <p class="tags"><span class="tag">Innovation factory</span></p>
             <h4>Rôle</h4>
@@ -241,7 +241,7 @@
           <div class="info sims">
             <h3> Memory Life
             </h3>
-            <p class="description">Le cloud photo/vidéo par orange qui offre une expérience d'immersion dans ses souvenir.</p>
+            <p class="description">Le cloud photo/vidéo par orange qui offre une expérience d'immersion dans ses souvenirs.</p>
             <h4>Client</h4>
             <p class="tags"><span class="tag">Orange</span></p>
             <h4>Rôle</h4>
@@ -257,7 +257,7 @@
           <div class="two-face__scroll">
             <h3> Memory Life
             </h3>
-            <p class="description">Le cloud photo/vidéo par orange qui offre une expérience d'immersion dans ses souvenir.</p>
+            <p class="description">Le cloud photo/vidéo par orange qui offre une expérience d'immersion dans ses souvenirs.</p>
             <h4>Client</h4>
             <p class="tags"><span class="tag">Orange</span></p>
             <h4>Rôle</h4>
