--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p class="tags"><span class="tag">Designer</span>
             </p>
           </div>
-          <div class="work__img-container"><img src="/images/projects/clipptown/01_HOME_01.png"><img src="/images/projects/clipptown/07_ADDCLIPP.png"><img src="/images/projects/clipptown/02_NEWS.png"><img src="/images/projects/clipptown/05_GUIDES.png"><img src="/images/projects/clipptown/10_MAP.png">
+          <div class="work__img-container"><img src="/images/projects/clipptown/01_HOME_01.jpg"><img src="/images/projects/clipptown/07_ADDCLIPP.jpg"><img src="/images/projects/clipptown/02_NEWS.jpg"><img src="/images/projects/clipptown/05_GUIDES.jpg"><img src="/images/projects/clipptown/10_MAP.jpg">
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
             <p class="tags"><span class="tag">html</span><span class="tag">sass</span><span class="tag">meteor</span>
             </p>
           </div>
-          <div class="work__img-container"><img src="/images/projects/startupInnovation/project.png"><img src="/images/projects/startupInnovation/detail.png">
+          <div class="work__img-container"><img src="/images/projects/startupInnovation/project.jpg"><img src="/images/projects/startupInnovation/detail.jpg">
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
             <p class="tags"><span class="tag">Designer</span>
             </p>
           </div>
-          <div class="work__img-container"><img src="/images/projects/memorylife/101_HOME_01_MENU_OUVERT.png"><img src="/images/projects/memorylife/101_HOME_02_MENU_FERMER.png"><img src="/images/projects/memorylife/102_ALBUM.png"><img src="/images/projects/memorylife/105_REGIONS_02.png"><img src="/images/projects/memorylife/110_RECHERCHE.png"><img src="/images/projects/memorylife/111_DETAIL_02_INFOS.png">
+          <div class="work__img-container"><img src="/images/projects/memorylife/101_HOME_01_MENU_OUVERT.jpg"><img src="/images/projects/memorylife/101_HOME_02_MENU_FERMER.jpg"><img src="/images/projects/memorylife/102_ALBUM.jpg"><img src="/images/projects/memorylife/105_REGIONS_02.jpg"><img src="/images/projects/memorylife/110_RECHERCHE.jpg"><img src="/images/projects/memorylife/111_DETAIL_02_INFOS.jpg">
           </div>
         </div>
       </div>
