--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>mickaelmarquez.com</title>
-  <meta name="description" content="A new Yeogurt application">
+  <title>Mickaël Marquez</title>
+  <meta name="description" content="UI/UX &amp; Graphic Designer, Front-End Developer">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="./styles/main.css">
 </head>
@@ -38,7 +38,7 @@
           <h2> UI/UX &amp; Graphic Designer<br class="sims"><span class="sims">Front-End Developer</span>
           </h2>
           <p>Freelance</p>
-          <p>Paris</p><a href="mailto:marquez.mickael@gmail.com" class="sims">marquez.mickael@gmail.com</a><a href="tel:+336 09 42 80 50" class="sims">+336 09 42 80 50</a><a href="https://dribbble.com/mickaelmarquez" target="_blank" class="social"><i class="icon-dribbble"></i></a><a href="https://github.com/mickaelmarq" target="_blank" class="social sims"><i class="icon-github"></i></a>
+          <p>Montréal</p><a href="mailto:marquez.mickael@gmail.com" class="sims">marquez.mickael@gmail.com</a><a href="tel:+336 09 42 80 50" class="sims">+336 09 42 80 50</a><a href="https://dribbble.com/mickaelmarquez" target="_blank" class="social"><i class="icon-dribbble"></i></a><a href="https://github.com/mickaelmarq" target="_blank" class="social sims"><i class="icon-github"></i></a>
         </div>
       </div>
       <div class="two-face__right">
