--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h2> UI/UX &amp; Graphic Designer<br class="sims"><span class="sims">Front-End Developer</span>
           </h2>
           <p>Freelance</p>
-          <p>Montréal</p><a href="mailto:marquez.mickael@gmail.com" class="sims">marquez.mickael@gmail.com</a><a href="tel:+336 09 42 80 50" class="sims">+336 09 42 80 50</a><a href="https://dribbble.com/mickaelmarquez" target="_blank" class="social"><i class="icon-dribbble"></i></a><a href="https://github.com/mickaelmarq" target="_blank" class="social sims"><i class="icon-github"></i></a>
+          <p>Paris / Lyon</p><a href="mailto:marquez.mickael@gmail.com" class="sims">marquez.mickael@gmail.com</a><a href="tel:+336 09 42 80 50" class="sims">+336 09 42 80 50</a><a href="https://dribbble.com/mickaelmarquez" target="_blank" class="social"><i class="icon-dribbble"></i></a><a href="https://github.com/mickaelmarq" target="_blank" class="social sims"><i class="icon-github"></i></a>
         </div>
       </div>
       <div class="two-face__right">
@@ -203,7 +203,7 @@
           <div class="info sims">
             <h3> Startup Innovation
             </h3>
-            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idées et de projets varier/variés.</p>
+            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idées et de projets variés.</p>
             <h4>Client</h4>
             <p class="tags"><span class="tag">Innovation factory</span></p>
             <h4>Rôle</h4>
@@ -222,7 +222,7 @@
           <div class="two-face__scroll">
             <h3> Startup Innovation
             </h3>
-            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idées et de projets varier/variés.</p>
+            <p class="description">Plate-forme de projet de la Web School Factory. Elle permet de regrouper les élèves autour d'idées et de projets variés.</p>
             <h4>Client</h4>
             <p class="tags"><span class="tag">Innovation factory</span></p>
             <h4>Rôle</h4>
