--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           <h2> UI/UX &amp; Graphic Designer<br class="sims"><span class="sims">Front-End Developer</span>
           </h2>
           <p>Freelance</p>
-          <p>Paris / Lyon</p><a href="mailto:marquez.mickael@gmail.com" class="sims">marquez.mickael@gmail.com</a><a href="tel:+336 09 42 80 50" class="sims">+336 09 42 80 50</a><a href="https://dribbble.com/mickaelmarquez" target="_blank" class="social"><i class="icon-dribbble"></i></a><a href="https://github.com/mickaelmarq" target="_blank" class="social sims"><i class="icon-github"></i></a>
+          <p>Paris / Lyon</p><a href="mailto:marquez.mickael@gmail.com" class="sims">marquez.mickael@gmail.com</a><a href="https://dribbble.com/mickaelmarquez" target="_blank" class="social"><i class="icon-dribbble"></i></a><a href="https://github.com/mickaelmarq" target="_blank" class="social sims"><i class="icon-github"></i></a>
         </div>
       </div>
       <div class="two-face__right">
         <div class="two-face__content">
           <h1>Marquez</h1>
-          <h2>Front-End Developer</h2><a href="mailto:marquez.mickael@gmail.com">marquez.mickael@gmail.com</a><a href="tel:+336 09 42 80 50">+336 09 42 80 50</a><a href="https://github.com/mickaelmarq" target="_blank" class="social"><i class="icon-github"></i></a>
+          <h2>Front-End Developer</h2><a href="mailto:marquez.mickael@gmail.com">marquez.mickael@gmail.com</a><a href="https://github.com/mickaelmarq" target="_blank" class="social"><i class="icon-github"></i></a>
         </div>
       </div>
     </div>
